# minenv

./: .cirrus.yml  Cargo.toml  LICENSE  README.md  test.env
examples/: basic.rs
src/: lib.rs
