[package]
name = "minenv"
version = "1.1.0"
description = "access env vars, falling back to a sapecified .env file, in 50 lines of code instead of 1,500"
edition = "2024"
license = "MIT"
categories = ["config"]
homepage = "https://github.com/duckinator/minenv"
keywords = ["dotenv", "env", "environment"]


[dependencies]
