[package]
name = "minenv"
version = "1.1.1"
description = "use env files to store config, env vars override them, in 50 lines of code instead of 1,500"
edition = "2024"
license = "MIT"
categories = ["config"]
homepage = "https://github.com/duckinator/minenv"
keywords = ["dotenv", "env", "environment"]


[dependencies]
